TA-T2762 fix dialog jumping

--- a/src/app/modules/html-editor/components/html-editor/html-editor.component.scss
+++ b/src/app/modules/html-editor/components/html-editor/html-editor.component.scss
@@ -26,6 +26,14 @@
       transition: none !important;
     }
 
+    // Dialog jumping TA-T2762
+    .fr-toolbar-open .fr-more-toolbar {
+      display: block;
+    }
+    .fr-more-toolbar {
+      display: none;
+    }
+    ///
 
     .fr-toolbar.fr-top {
       position: sticky;
